--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="keywords" content="Frontend Mentor, HTML, CSS" />
         <meta
             name="description"
-            content="Frontend Mentor - Blog preview card Challenge Solution"
+            content="Frontend Mentor - Blog Preview Card Challenge"
         />
         <link
             rel="icon"
@@ -58,24 +58,24 @@
                     </figure>
                 </section>
             </article>
+            <footer class="attribution__wrapper">
+                <div class="attribution">
+                    Challenge by
+                    <a
+                        href="https://www.frontendmentor.io?ref=challenge"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        aria-label="Frontend Mentor Challenge"
+                        >Frontend Mentor</a
+                    >. Coded by
+                    <a
+                        href="https://github.com/iamitshaw-1998/fem-blog-preview"
+                        aria-label="Coded by Amit Shaw"
+                    >
+                        Amit Shaw </a
+                    >.
+                </div>
+            </footer>
         </main>
-        <footer class="attribution__wrapper">
-            <div class="attribution">
-                Challenge by
-                <a
-                    href="https://www.frontendmentor.io?ref=challenge"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                    aria-label="Frontend Mentor Challenge"
-                    >Frontend Mentor</a
-                >. Coded by
-                <a
-                    href="https://github.com/iamitshaw-007/blog-card-challenge"
-                    aria-label="Coded by Amit Shaw"
-                >
-                    Amit Shaw </a
-                >.
-            </div>
-        </footer>
     </body>
 </html>
